[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Test Scenes/Bullet Tester.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Bullet/Basic Functional Bullet/Basic Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Bullet/Piercing Bullet/Piercing Bullet.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.8829, 122.612 )

[node name="Node" type="Node"]
script = ExtResource( 2 )
BasicBullet = ExtResource( 3 )
PiercingBullet = ExtResource( 4 )

[node name="SpawnPos" type="Position2D" parent="."]
position = Vector2( 191.57, 323.411 )

[node name="Target Dummy" type="RigidBody2D" parent="."]
position = Vector2( 838.391, 319.897 )
mode = 1
gravity_scale = 0.0

[node name="Hitbox" type="CollisionShape2D" parent="Target Dummy"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Target Dummy"]
texture = ExtResource( 1 )

[node name="Shot Cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Fast Button" type="CheckBox" parent="."]
margin_left = 287.864
margin_top = 79.0
margin_right = 372.864
margin_bottom = 135.0
text = "Fast"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wide Button" type="CheckBox" parent="."]
margin_left = 367.081
margin_top = 94.7736
margin_right = 428.081
margin_bottom = 118.774
text = "Wide"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Piercing Button" type="CheckBox" parent="."]
margin_left = 445.836
margin_top = 93.4387
margin_right = 524.836
margin_bottom = 117.439
text = "Piercing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shoot Button" type="Button" parent="."]
margin_left = 80.9417
margin_top = 79.6652
margin_right = 226.942
margin_bottom = 127.665
text = "Fire Bullet"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Shot Cooldown" to="." method="_on_Shot_Cooldown_timeout"]
[connection signal="pressed" from="Fast Button" to="." method="_on_Fast_Button_pressed"]
[connection signal="pressed" from="Wide Button" to="." method="_on_Wide_Button_pressed"]
[connection signal="pressed" from="Piercing Button" to="." method="_on_Piercing_Button_pressed"]
[connection signal="button_down" from="Shoot Button" to="." method="_on_Shoot_Button_button_down"]
[connection signal="pressed" from="Shoot Button" to="." method="_on_Shoot_Button_pressed"]
